--- a/src/App.css
+++ b/src/App.css
@@ -717,12 +717,12 @@ background-image: url(/public/assets/various/dot.png);
   /* max-width: 768px; */
   margin: 0 auto;
   display: grid;
-  gap: 16px;
+  gap: 1.6rem;
   grid-template-columns: repeat(3,1fr);
 }
 
 .archive-card {
-  border-radius: 0.75rem;
+  border-radius: 1.4rem;
   border: 1px solid var(--border-gray);
   background: var(--black-white);
   margin-bottom: 16px;
@@ -763,6 +763,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .archive-info p {
+  font-size: 1.4rem;
   font-family: var(--font-mono);
   color: var(--text-color-05);
   margin-top: 4px;
@@ -863,7 +864,7 @@ background-image: url(/public/assets/various/dot.png);
 .about-grid-wrapper {
   margin: 9.6rem auto 2.4rem;
   max-width: 900px;
-
+  gap: 14px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(7, 200px);
@@ -872,9 +873,10 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .bento-card {
-  /* border-radius: 1.4rem; */
-  /* background-color: var(--nav-color); */
-  /* padding: 1.4rem; */
+  border-radius: 1.4rem;
+  background-color: var(--nav-color);
+  /* padding: 0.4rem; */
+  
   transition: all 0.3s ease-in-out;
 }
 
@@ -882,12 +884,11 @@ background-image: url(/public/assets/various/dot.png);
   color: var(--text-color-2);
   font-family: var(--font-mono);
   font-weight:300;
-  padding: 1rem;
-  /* margin-bottom: 1rem; */
+  padding: 1.4rem;
   width: auto;
   font-size: 1.4rem;
-  border-bottom: 1px solid var(--border-gray);
   transition: all 0.3s ease-in-out;
+  border-bottom: 1px solid var(--border-gray);
 }
 
 
@@ -895,7 +896,7 @@ background-image: url(/public/assets/various/dot.png);
   grid-area: 1 / 1 / 3 / 4;
   padding-top: 2.4rem;
   background: transparent;
-  border-bottom: 0.5px solid var(--border-gray);
+  
   /* border-right: 0.5px solid var(--border-gray); */
 }
 
@@ -924,9 +925,7 @@ background-image: url(/public/assets/various/dot.png);
 
 .experience-box {
   grid-area: 3/1/5/4;
-  border-left: 0.5px solid var(--border-gray) ;
-  border-bottom: 0.5px solid var(--border-gray) ;
-  border-right: 0.5px solid var(--border-gray) ;
+  border: 0.5px solid var(--border-gray) ;
 }
 
 .experience-list {
@@ -1022,17 +1021,13 @@ background-image: url(/public/assets/various/dot.png);
   overflow: hidden;
   cursor: pointer;
 
-  border-right: 0.5px solid var(--border-gray) ;
-  border-bottom: 0.5px solid var(--border-gray) ;
-
+  border: 0.5px solid var(--border-gray) ;
 }
 
 
 .tech-stack-box {
   grid-area: 5/1/7/4;
-  border-bottom: 0.5px solid var(--border-gray) ;
-  border-left: 0.5px solid var(--border-gray) ;
-  border-right: 0.5px solid var(--border-gray) ;
+  border: 0.5px solid var(--border-gray) ;
 }
 
 .tech-stack-list-item {
@@ -1066,6 +1061,7 @@ background-image: url(/public/assets/various/dot.png);
 .tools-box-items{
   border-radius: 1.4rem;
   gap: 8px;
+  
 }
 
 .tools-box-items h6 {
@@ -1080,8 +1076,8 @@ background-image: url(/public/assets/various/dot.png);
 
 .tools-box {
   grid-area: 5/4/7/6;
-  border-right: 0.5px solid var(--border-gray) ;
-  border-bottom: 0.5px solid var(--border-gray) ;
+  border: 0.5px solid var(--border-gray) ;
+  
 }
 
 .tool-box-grid {
@@ -1102,7 +1098,7 @@ background-image: url(/public/assets/various/dot.png);
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  /* background: linear-gradient(180deg, var(--nav-color) 0%, rgba(0, 0, 0, 0.00) 100%); */
+  background: none;
 
 }
 
@@ -1112,6 +1108,7 @@ background-image: url(/public/assets/various/dot.png);
   font-style: italic;
   color: var(--text-color-05);
   font-size: 1.6rem;
+  text-align: center;
 }
 
 .thankyou-box a {
@@ -1196,6 +1193,7 @@ background-image: url(/public/assets/various/dot.png);
   }
   .archive-wrapper {
     grid-template-columns: repeat(2,1fr);
+    gap: .8rem;
   }
 
   .project-detail-grid {
@@ -1290,6 +1288,14 @@ background-image: url(/public/assets/various/dot.png);
   margin: 6px 8px;
 
   font-size: 1.4rem;
+}
+
+.archive-info {
+  padding: 1rem;
+}
+
+.archive-info p {
+  line-height: 1.8rem;
 }
 
 }
@@ -1392,7 +1398,7 @@ background-image: url(/public/assets/various/dot.png);
 
 
   .about-title{
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.8rem;
     /* margin-bottom: 0.5rem; */
 
   }
@@ -1476,7 +1482,14 @@ background-image: url(/public/assets/various/dot.png);
     line-height: 2.1rem;
   }
 
+  .archive-info {
+    padding: 1rem;
+  }
 
+  .archive-info h5 {
+    font-size: 1.8rem;
+    line-height: 2rem;
+  }
 
 
 }
@@ -1484,6 +1497,7 @@ background-image: url(/public/assets/various/dot.png);
 @media screen and (max-width:576px){
   .about-grid-wrapper {
     margin: 7.2rem auto 2.4rem;
+    gap: 8px;
   }
 
   .intro-box p{
@@ -1585,7 +1599,8 @@ background-image: url(/public/assets/various/dot.png);
 
   .about-grid-wrapper {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(12, 120px);
+    grid-template-rows: repeat(12, 115px);
+    gap: 8px;
   }
 
 
@@ -1675,7 +1690,10 @@ background-image: url(/public/assets/various/dot.png);
 
   .thankyou-box {
     grid-area:12/ 1/ 13 / 5 ;
+    gap: 8px;
+   
   }
+  
 
   .title-wrapper h5 {
     font-size: 1.6rem;
@@ -1698,6 +1716,7 @@ background-image: url(/public/assets/various/dot.png);
     font-size: 1.3rem;
     line-height: 2.1rem;
   }
+  
 
 }
 
