--- a/src/App.css
+++ b/src/App.css
@@ -925,6 +925,16 @@ background-image: url(/public/assets/various/dot.png);
   position: relative;
 }
 
+
+.bento-card p {
+  color: var(--text-color-2);
+}
+
+.about-text-span {
+  color: var(--text-color);
+  font-size: inherit;
+}
+
 .about-title{
   color: var(--text-color-08);
   transition: all 0.3s ease-in-out;
@@ -1019,7 +1029,7 @@ background-image: url(/public/assets/various/dot.png);
 }
 
 .about-image-1 {
-  height: 250px;
+  height: 100%;
   width: 200px;
   background-image: url('../public//assets/various/about-1.png');
   border-radius: 14px;
@@ -1674,6 +1684,7 @@ position: relative;
   .bento-card  h6 {
     font-size: 1.4rem;
   }
+
 
   .intro-box {
     grid-area: 1 / 1 / 3 / 5;
