--- a/src/App.css
+++ b/src/App.css
@@ -742,6 +742,7 @@ background-image: url(/public/assets/various/dot.png);
 
 .archive-card video {
   width: 100%;
+  aspect-ratio: 7/3;
   flex-grow: 1;
   object-fit: cover;
   align-items: center;
