--- a/src/App.css
+++ b/src/App.css
@@ -984,11 +984,15 @@ background-image: url(/public/assets/various/dot.png);
 .about-image-1 {
   height: 100%;
   width: 200px;
-  background-image: url('../public//assets/various/about-1.png');
+  background-image: url('../public//assets/various/about-2.jpg');
   border-radius: 14px;
   background-position: center;
   background-size: cover;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  transition: all 0.3s ease-in-out;
+}
+.about-image-1:hover {
+  background-image: url('../public//assets/various/about-1.jpg');
 }
 
 .map-box {
