--- a/src/App.css
+++ b/src/App.css
@@ -1064,8 +1064,7 @@ p {
 
 .map-box {
   position: relative;
-
-  width: 36rem;
+  width: 100%;
   height: 18rem;
   background-image: url(../public//assets/various/map.jpg);
   background-position: bottom right;
@@ -1076,7 +1075,7 @@ p {
 }
 
 .about-image-2 {
-  width: 36rem;
+  width: 100%;
   height: 18rem;
   background-image: url(../public//assets/various/about-image-2.jpeg);
   background-position: bottom right;
