--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
   --font-mono: "JetBrains Mono", monospace;
   --font-primary: "Inter", sans-serif;
+  --font-fancy: "Cormorant", serif;
   --green-light: rgba(166, 252, 8, 0.2);
   --green: rgba(166, 252, 8, 1);
 
@@ -1323,37 +1324,143 @@ p {
   z-index: -1;
 }
 
-.blog-content-h1 {
-  font-size: 24px;
-  margin-bottom: 0.5em;
+.blog-link {
+  background: var(--na);
+  border-bottom: 0.5px solid var(--border-gray);
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  padding: 1rem 0px;
+  transition: all 0.3s ease-in-out;
+}
+.blog-link:hover {
+  padding: 1rem 1rem;
+  border-bottom: 0.5px solid var(--text-color-08);
 }
 
-.blog-content-h2 {
-  font-size: 18px;
-  margin-bottom: 0.5em;
-}
-.blog-content-h3 {
-  font-size: 14px;
-  margin-bottom: 0.5em;
+.blog-link h6 {
+  font-size: 1.6rem;
+  color: var(--text-color);
 }
 
-.blog-content-p {
-  line-height: 1.6;
-  font-size: 16px;
-  margin-bottom: 1em;
+.blog-link p {
+  font-size: 1.4rem;
+  text-align: right;
+  color: var(--nav-icon-color);
+  font-family: var(--font-mono);
 }
 
-.blog-content-ul {
-  padding-left: 1.5em;
-  list-style-type: disc;
+.blog-title {
+  font-size: 2.4rem;
 }
 
-.blog-content img {
-  max-width: 100%; /* Makes images responsive */
-  height: auto;
-  margin: 1em 0; /* Adds spacing */
-  border-radius: 8px; /* Optional: rounded corners */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: shadow effect */
+.blog-post-wrapper {
+  padding: 1.6rem;
+  margin-top: 10vh;
+}
+
+.blog-content h1 {
+  font-size: 3.2rem;
+  line-height: 4rem;
+}
+
+.blog-content h2 {
+  font-size: 2.8rem;
+  line-height: 3.2rem;
+}
+
+.blog-content h3 {
+  font-size: 2.4rem;
+  line-height: 3rem;
+}
+
+.blog-content h4 {
+  font-size: 2rem;
+  line-height: 3rem;
+}
+
+.blog-content h5 {
+  font-size: 1.8rem;
+  line-height: 2.8rem;
+}
+
+.blog-content h6 {
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+}
+
+.blog-content p {
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+  color: var(--text-color-2);
+}
+
+.blog-content a {
+  font-size: 1.6rem;
+  text-decoration: underline;
+  color: #0e8bf1;
+}
+
+.blog-content .blog-image-wrapper img {
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
+  border-radius: 8px;
+}
+
+.blog-content hr {
+  border-color: var(--border-gray);
+  margin: 2.4rem 0;
+}
+
+.quote-block {
+  background-color: var(--nav-color);
+  border-left: 4px solid var(--border-gray);
+  border-right: 4px solid var(--border-gray);
+  font-family: var(--font-fancy);
+  padding: 2.4rem 3.6rem;
+  font-style: italic;
+  margin: 4.8rem 0;
+  border-radius: 8px !important;
+}
+
+.quote-block p {
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+}
+
+.code-block-wrapper {
+  margin-top: 6.4rem;
+}
+
+.code-block-wrapper .code-block-language {
+  font-family: var(--font-mono);
+  font-size: 1.2rem;
+  color: var(--nav-icon-higlight);
+  padding: 1rem 2rem;
+  border-radius: 1rem 1rem 0 0;
+  color: var(--orange);
+  background-color: var(--border-gray);
+  margin-left: 1rem;
+  width: fit-content;
+}
+
+.code-block {
+  border-radius: 8px !important;
+  padding: 2rem !important;
+  font-size: 2.4rem !important;
+  font-family: unset !important;
+  font-family: var(--font-mono) !important;
+  text-shadow: none !important;
+  border-width: 1px !important;
+  border-color: var(--border-gray) !important;
+  background-color: var(--gray) !important;
+  box-shadow: black 1px 1px 0.5rem inset !important;
+  line-height: 0.8 !important;
+  margin: 0 !important;
+}
+
+.code-block code {
+  line-height: 2.4rem !important;
 }
 
 @media screen and (max-width: 1200px) {
