--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ p {
 
 .nav ul {
   display: flex;
-  gap: 2.4rem;
+  gap: 1.4rem;
 }
 
 .nav-link a {
@@ -1332,6 +1332,10 @@ p {
   z-index: -1;
 }
 
+.blogs-wrapper {
+  padding: 16px;
+}
+
 .blog-link {
   background: var(--na);
   border-bottom: 0.5px solid var(--border-gray);
@@ -1339,6 +1343,7 @@ p {
   grid-template-columns: 3fr 1fr;
   padding: 1rem 0px;
   transition: all 0.3s ease-in-out;
+  position: relative;
 }
 .blog-link:hover {
   padding: 1rem 1rem;
