--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,9 @@
   --nav-highlight: rgb(209, 209, 209);
   --nav-icon-border: rgb(96, 96, 96);
   --nav-icon-higlight: rgb(38, 38, 38);
+
+  --label-color: rgba(216, 216, 216, 0.8);
+  --label-color-2: rgba(236, 236, 236, 0.8);
 }
 
 [data-theme="dark"] {
@@ -58,6 +61,9 @@
   --nav-highlight: rgb(58, 58, 58);
   --nav-icon-border: rgb(96, 96, 96);
   --nav-icon-higlight: rgb(235, 235, 235);
+
+  --label-color: rgb(15, 15, 15, 0.5);
+  --label-color-2: rgb(15, 15, 15, 0.8);
 }
 
 * {
@@ -556,84 +562,83 @@ p {
 .projects-wrapper {
   margin: 0 auto;
   display: grid;
-  gap: 48px;
+  gap: 4.8rem;
   grid-template-columns: repeat(1, 1fr);
   place-items: center;
-  max-width: 1199px;
+  max-width: 786px;
 }
 
 .project-card {
   text-decoration: none;
   color: white;
   border-radius: 1.6rem;
-  /* overflow: hidden; */
-  background-image: linear-gradient(
-    180deg,
-    var(--nav-color) 0%,
-    var(--black-white-0) 100%
-  );
+  overflow: hidden;
   position: relative;
   width: 100%;
-  height: 800px;
-  border: 1px solid var(--border-gray);
+  /* height: 800px; */
+  /* aspect-ratio: 16/9; */
+  /* border: 1px solid var(--border-gray); */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   transition: all 400ms ease-in-out;
 }
 
-.project-card:hover {
-  border: 1px solid var(--nav-highlight);
+.project-card-images {
+  border-radius: 1.6rem;
+  overflow: hidden;
+  /* padding: 1.4rem; */
 }
 
-.project-card:hover .project-card-image {
-  background-color: var(--nav-color);
-}
-
-.project-card-image {
-  width: 100%;
-  height: auto;
-  border-top: 1px solid var(--border-gray);
-  flex-grow: 1;
-  border-radius: 0 0 1.6rem 1.6rem;
+.project-card-images img {
+  border-radius: 1.6rem;
+  transform: scale(1.05);
   transition: all 400ms ease-in-out;
 }
 
-.project-info img {
-  width: 100%;
-  height: 100%;
+.project-card:hover img {
+  transform: scale(1.01);
 }
 
 .project-info {
   display: flex;
   align-items: flex-start;
-  flex-direction: column;
+  justify-content: space-between;
   gap: 4px;
-  padding: 1.6rem;
-}
-.project-info h4 {
-  color: var(--text-color);
 
-  margin-left: 8px;
+  padding: 1.6rem 0.8rem;
+}
+
+.project-info-title {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.project-info-description {
+  width: 60%;
+}
+
+.project-info-title h4 {
+  color: var(--text-color);
   transition: all 300ms ease-in-out;
 }
 
 .project-info p {
   color: var(--text-color-2);
-  width: 50%;
-  margin-left: 8px;
-  margin-bottom: 16px;
+
   transition: all 300ms ease-in-out;
 }
 
 .tech-used {
-  position: absolute;
+  /* position: absolute;
+  right: 16px;
+  bottom: 24px; */
   color: var(--text-color-05);
   font-family: var(--font-mono);
-  right: 16px;
-  top: 24px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .project-detail img {
@@ -1367,7 +1372,6 @@ p {
 
   .project-card {
     width: 100%;
-    height: 60rem;
   }
 
   .project-detail-grid {
@@ -1531,7 +1535,6 @@ p {
 
   .project-card {
     width: 100%;
-    height: 60svh;
   }
 
   .social-links {
@@ -1568,8 +1571,19 @@ p {
   }
 
   .project-info {
-    padding: 0.8rem;
+    padding: 1.6rem 0.8rem;
     gap: 8px;
+    flex-direction: column;
+  }
+
+  .project-info-title {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .project-info-description {
+    width: 100%;
   }
 
   .project-info h3 {
@@ -1770,6 +1784,10 @@ p {
     margin: 0;
   }
 
+  .project-info-title {
+    flex-direction: column;
+  }
+
   .tech-used {
     position: relative;
     top: unset;
@@ -1803,12 +1821,11 @@ p {
   } */
 
   .projects-wrapper {
-    gap: 16px;
+    gap: 4.8rem;
   }
 
   .project-card {
     width: 100%;
-    height: 58svh;
   }
 
   .project-info p {
