--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,7 @@ p {
   aspect-ratio: 6/2;
   position: absolute;
   top: 0%;
-
+  z-index: -15;
   -webkit-mask-image: linear-gradient(
     180deg,
     #404040 0%,
@@ -563,9 +563,9 @@ p {
   margin: 0 auto;
   display: grid;
   gap: 4.8rem;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   place-items: center;
-  max-width: 900px;
+  max-width: 1600px;
 }
 
 .project-card {
@@ -576,10 +576,11 @@ p {
   position: relative;
   width: 100%;
   /* height: 800px; */
-  /* aspect-ratio: 16/9; */
+  /* aspect-ratio: 12/9; */
   /* border: 1px solid var(--border-gray); */
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
   transition: all 400ms ease-in-out;
 }
@@ -587,6 +588,7 @@ p {
 .project-card-images {
   border-radius: 1.6rem;
   overflow: hidden;
+  aspect-ratio: 16/9;
   /* padding: 1.4rem; */
 }
 
